--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,14 @@
 :root {
     --primary-text-color: #757575;
     --secondary-text-color: #212121;
-    --accent-color: ##2196F3;
+    --accent-color: #2196F3;
 }
 
 body {
     font-family: Raleway, Roboto, serif;
     font-size: 14px;
     font-style: normal;
-    color: var (--primary-text-color);
+    color: var(--primary-text-color);
     background-color: #FFFFFF;
 }
 
@@ -21,50 +21,59 @@ body {
 }
 
 /* logo */
-.page-logo:hover,
-.page-logo:focus {
+.page-logo {
+    color: var(--secondary-text-color); 
     font-family: 'Raleway', serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.20;
     letter-spacing: 0.03em;
-    color: #292929;
     text-decoration: none;
     text-transform: uppercase;
 }
 
+.page-logo:hover,
+.page-logo:focus {
+    color: #292929;   
+}
+
 .web-logo {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 /* site nav */
-.site-nav {
-    color: var (--secondary-text-color);
+.list {
+    list-style: none;
+}
+
+.site-nav .link {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 14px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-decoration: none;
-}
+    color: #757575;
+    }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
-.auth-nav {
-    color: var(--primary-text-color);
+.auth-nav .link {
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    text-decoration: none;
+    color: #757575;
 }
 
- .auth-nav:hover,
- .auth-nav:focus {
-    color: #2196F3;
+ .auth-nav .link:hover,
+ .auth-nav .link:focus {
+    color: var(--accent-color);
  }
 
 /* Hero */
@@ -87,7 +96,7 @@ body {
 }
 
 .button.primary {
-    background: #2196F3;
+    background:var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px; 
 }
@@ -100,7 +109,7 @@ body {
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: -var(--secondary-text-color);
+    color: var(--secondary-text-color);
 }
 
 .features list .title {
