--- a/css/styles.css
+++ b/css/styles.css
@@ -212,3 +212,19 @@ background-color: #2F303A;
 }
  
 /* potfolio/css */
+.main {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    list-style: none;
+    color: var(--secondary-text-color);
+}
+
+.work-text {
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color)
+}
