--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,15 @@
     --primary-text-color: #757575;
     --secondary-text-color: #212121;
     --accent-color: #2196F3;
+    --secondary-background-color: #FFFFFF;
 }
 
 body {
-    font-family: Roboto, serif; 
+    font-family: Roboto, sans-serif; 
     font-size: 14px;
-    font-style: normal;
+    letter-spacing: 0.03em;
     color: var(--primary-text-color);
-    background-color: #FFFFFF;
+    background-color: var(--secondary-background-color);
 }
 
 .list {
@@ -28,9 +29,7 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.20;
-    letter-spacing: 0.03em;
     text-decoration: none;
-    text-transform: uppercase;
 }
 
 .page-logo:hover,
@@ -43,8 +42,8 @@ body {
 }
 
 /* site nav */
-.list {
-    list-style: none;
+.link {
+    text-decoration: none;
 }
 
 .site-nav .link {
@@ -53,11 +52,15 @@ body {
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-decoration: none;
-    color: #757575;
+    color: var(--secondary-text-color);
     }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
+    color: var(--accent-color);
+}
+
+.current {
     color: var(--accent-color);
 }
 
@@ -75,18 +78,20 @@ body {
     color: var(--accent-color);
  }
 
-/* Hero */
+/* Herro */
+.herro {
+    line-height: 1.36;
+    background-color: #2F303A;
+}
+
 .hero-title,
 .portfolio-title {
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #FFFFFF;
-    /* тимчасовий колір бекграунду, бо текст і фон білі */
-    background-color: var(--primary-text-color); 
+    color: var(--secondary-background-color);
 }
 
 .btn {
@@ -98,7 +103,7 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
-    color: #FFFFFF;
+    color: var(--secondary-background-color);
     background: var(--accent-color)
 }
 
@@ -115,15 +120,27 @@ body {
     font-size: 36px;
     line-height: 42px;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--secondary-text-color);
 }
+
+ /*прихований заголовок*/
+ .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 
 .features-list .title {
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     list-style: none;
     color: var(--secondary-text-color);
@@ -133,7 +150,6 @@ body {
     font-family: 'Roboto';
     font-size: 14px;
     line-height: 24px;
-    letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
 
@@ -154,7 +170,7 @@ body {
 
 /* team */
 .team {
-    background-color: #FFFFFF;
+    background-color: var(--secondary-background-color);
     border-radius: 0px;
 }
 
@@ -162,7 +178,6 @@ body {
     font-size: 16px;
     line-height: 19px;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
 
@@ -171,7 +186,6 @@ body {
     font-size: 16px;
     line-height: 19px;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--secondary-text-color);
 }
 
@@ -191,10 +205,8 @@ background-color: #2F303A;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     text-decoration: none;
-    text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--secondary-background-color);
 }
 
 .adress-link,
@@ -202,10 +214,9 @@ background-color: #2F303A;
     font-style: normal;
     font-size: 14px;
     line-height: 1.71px;
-    letter-spacing: 0.03em;
     text-decoration: none;
     text-transform: uppercase;
-    color: #FFFFFF; 
+    color: var(--secondary-background-color) 
 }
 
 .contacts-link {
@@ -217,7 +228,6 @@ background-color: #2F303A;
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
     list-style: none;
     color: var(--secondary-text-color);
@@ -226,7 +236,6 @@ background-color: #2F303A;
 .work-text {
     font-size: 16px;
     line-height: 19px;
-    letter-spacing: 0.03em;
     color: var(--primary-text-color)
 }
 
@@ -235,7 +244,6 @@ background-color: #2F303A;
     font-size: 16px;
     line-height: 1.63px;
     text-align: center;
-    letter-spacing: 0.03em;
     cursor: pointer;
     color: var(--secondary-text-color);
 }
@@ -252,17 +260,16 @@ background-color: #2F303A;
     font-size: 16px;
     line-height: 26px;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--secondary-text-color);
  }
 
  .btn-text:hover,
  .btn-text:focus {
-    color: #FFFFFF;
+    color: var(--secondary-background-color);
  }
 
  .magic .link {
-    background-color: #FFFFFF;
+    background-color: var(--secondary-background-color);
  }
 
 .magic .link:hover,
