--- a/css/styles.css
+++ b/css/styles.css
@@ -175,11 +175,9 @@ body {
     color: var(--secondary-text-color);
 }
 
-/* .photo{
-    display: flex;
-    flex-direction:row;
+.photo{
     background-color: var(--primary-text-color);
-} */
+}
 
 /* footer    */
 .footer {
@@ -212,21 +210,19 @@ background-color: #2F303A;
     color:var(--accent-color);
 }
 
- 
 /* potfolio/css */
-
-.main {
-    font-weight: 700;
-    line-height: 1.14;
-    text-transform: uppercase;
-    list-style: none;
-    color: var(--secondary-text-color);
-}
-
 .work-text {
     font-size: 16px;
-    line-height: 1.19;
-    color: var(--secondary-text-color)
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+
+.list-title {
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--secondary-text-color);
 }
 
 .portfolio-btn {
@@ -240,20 +236,13 @@ background-color: #2F303A;
 
  .portfolio-btn:hover,
  .portfolio-btn:focus {
+    color: #F5F4FA;
     background: #2196F3;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
  }
  
- .active {
-    color: #F5F4FA;
- }
-
  .magic .link {
     background-color: var(--secondary-background-color);
  }
 
-.magic .link:hover,
-.magic .link:focus {
-    background-color: var(--accent-color);
- }
