add final fixion

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body {
     color: var(--accent-color);
 }
 
-.current {
+.site-nav .link.current {
     color: var(--accent-color);
 }
 
@@ -87,6 +87,7 @@ body {
 .herro-title {
     font-weight: 900;
     font-size: 44px;
+    line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
@@ -137,6 +138,7 @@ body {
   }
 
 .title {
+    font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
     list-style: none;
@@ -240,6 +242,11 @@ background-color: #2F303A;
     background: #2196F3;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+ }
+
+ .portfolio-btn.active {
+    background-color: var(--accent-color);
+    color: var(--secondary-background-color);
  }
  
  .magic .link {
